// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`supervision staff schema for 'US_CA' 'OFFICER1' 1`] = `
{
  "district": "DISTRICT 1",
  "email": "test-officer-1@example.com",
  "givenNames": "Maia",
  "hasCaseload": true,
  "pseudonymizedId": "p001",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER1",
  "stateCode": "US_CA",
  "supervisorExternalId": "SUPERVISOR1",
  "surname": "Douglas",
}
`;

exports[`supervision staff schema for 'US_IA' 'OFFICER1' 1`] = `
{
  "email": "test-officer-1@example.com",
  "givenNames": "Anne",
  "hasCaseload": true,
  "pseudonymizedId": "p123",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER1",
  "stateCode": "US_IA",
  "supervisorExternalId": null,
  "surname": "Teak",
}
`;

exports[`supervision staff schema for 'US_ID' 'OFFICER4' 1`] = `
{
  "district": "DISTRICT 1",
  "email": "test-officer-4@example.com",
  "givenNames": "Walter",
  "hasCaseload": true,
  "pseudonymizedId": "p004",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER4",
  "stateCode": "US_ID",
  "stateSpecificData": {
    "officeAddress": {
      "city": "iowa",
      "line1": "1234 address lane",
      "zip": "11123",
    },
    "stateCode": "US_ID",
  },
  "supervisorExternalId": "SUPER847",
  "surname": "Harris",
}
`;

exports[`supervision staff schema for 'US_ID' 'OFFICER6' 1`] = `
{
  "district": "DISTRICT 1",
  "email": "test-officer-6@example.com",
  "givenNames": "Hank",
  "hasCaseload": true,
  "pseudonymizedId": "p006",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER6",
  "stateCode": "US_ID",
  "stateSpecificData": {
    "officeAddress": undefined,
    "stateCode": "US_ID",
  },
  "supervisorExternalId": "SUPER847",
  "surname": "Schroeder",
}
`;

exports[`supervision staff schema for 'US_ME' 'OFFICER8' 1`] = `
{
  "email": "test-officer-8@example.com",
  "givenNames": "Brittney",
  "hasCaseload": true,
  "pseudonymizedId": "p008",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER8",
  "stateCode": "US_ME",
  "supervisorExternalId": null,
  "surname": "Chapman",
}
`;

exports[`supervision staff schema for 'US_MI' 'OFFICER8' 1`] = `
{
  "email": "test-officer-8@example.com",
  "givenNames": "Antonia",
  "hasCaseload": true,
  "pseudonymizedId": "p008",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER8",
  "stateCode": "US_MI",
  "supervisorExternalId": "1290831",
  "surname": "Bonilla",
}
`;

exports[`supervision staff schema for 'US_NC' 'NCOFFICER1' 1`] = `
{
  "email": null,
  "givenNames": "Nathalie",
  "hasCaseload": true,
  "pseudonymizedId": "NCOFFICER1",
  "recordType": "supervisionStaff",
  "staffExternalId": "NCOFFICER1",
  "stateCode": "US_NC",
  "supervisorExternalId": null,
  "surname": "Giles",
}
`;

exports[`supervision staff schema for 'US_ND' 'OFFICER3' 1`] = `
{
  "district": "DISTRICT 1",
  "email": "test-officer-3@example.com",
  "givenNames": "Sumaiya",
  "hasCaseload": true,
  "pseudonymizedId": "p003",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER3",
  "stateCode": "US_ND",
  "supervisorExternalId": null,
  "surname": "Osborne",
}
`;

exports[`supervision staff schema for 'US_NE' 'NEOFFICER1' 1`] = `
{
  "district": "DISTRICT 1",
  "email": "test-officer-ne@example.com",
  "givenNames": "Sarah",
  "hasCaseload": true,
  "pseudonymizedId": "p001",
  "recordType": "supervisionStaff",
  "staffExternalId": "NEOFFICER1",
  "stateCode": "US_NE",
  "supervisorExternalId": "NESUPERVISOR1",
  "surname": "Mitchell",
}
`;

exports[`supervision staff schema for 'US_OR' '271828' 1`] = `
{
  "email": null,
  "givenNames": "271828",
  "hasCaseload": true,
  "pseudonymizedId": "p271",
  "recordType": "supervisionStaff",
  "staffExternalId": "271828",
  "stateCode": "US_OR",
  "supervisorExternalId": null,
  "surname": "271828",
}
`;

exports[`supervision staff schema for 'US_OR' '314159' 1`] = `
{
  "email": null,
  "givenNames": "314159",
  "hasCaseload": true,
  "pseudonymizedId": "p314",
  "recordType": "supervisionStaff",
  "staffExternalId": "314159",
  "stateCode": "US_OR",
  "supervisorExternalId": "SUPER221",
  "surname": "314159",
}
`;

exports[`supervision staff schema for 'US_PA' 'OFFICER1' 1`] = `
{
  "email": "test-officer@example.com",
  "givenNames": "Dana",
  "hasCaseload": true,
  "pseudonymizedId": "p001",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER1",
  "stateCode": "US_PA",
  "supervisorExternalId": "25-1239123A",
  "surname": "Pruitt",
}
`;

exports[`supervision staff schema for 'US_PA' 'OFFICER2' 1`] = `
{
  "email": "test-officer@example.com",
  "givenNames": "Katelyn",
  "hasCaseload": true,
  "pseudonymizedId": "p002",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER2",
  "stateCode": "US_PA",
  "supervisorExternalId": null,
  "surname": "Frederick",
}
`;

exports[`supervision staff schema for 'US_TN' 'OFFICER1' 1`] = `
{
  "district": "Unit 1",
  "email": "test-officer@example.com",
  "givenNames": "Shayla",
  "hasCaseload": true,
  "pseudonymizedId": "p001",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER1",
  "stateCode": "US_TN",
  "supervisorExternalId": "agonzalez123",
  "surname": "Rice",
}
`;

exports[`supervision staff schema for 'US_TX' 'OFFICER1' 1`] = `
{
  "district": "DISTRICT 1",
  "email": "tx-test-officer@example.com",
  "givenNames": "Link",
  "hasCaseload": true,
  "pseudonymizedId": "p001",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER1",
  "stateCode": "US_TX",
  "stateSpecificData": {
    "isInUnderstaffedOffice": false,
    "stateCode": "US_TX",
  },
  "supervisorExternalId": "SUPERVISOR1",
  "surname": "Linkus",
}
`;

exports[`supervision staff schema for 'US_TX' 'OFFICER2' 1`] = `
{
  "district": "DISTRICT 42",
  "email": "tx-test-officer-2@example.com",
  "givenNames": "Arthur",
  "hasCaseload": true,
  "pseudonymizedId": "p002",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER2",
  "stateCode": "US_TX",
  "stateSpecificData": {
    "isInUnderstaffedOffice": true,
    "stateCode": "US_TX",
  },
  "supervisorExternalId": "SUPERVISOR2",
  "surname": "Jones",
}
`;

exports[`supervision staff schema for 'US_TX' 'OFFICER3' 1`] = `
{
  "district": "DISTRICT 23",
  "email": "tx-test-officer-3@example.com",
  "givenNames": "Amanda",
  "hasCaseload": true,
  "pseudonymizedId": "p003",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER3",
  "stateCode": "US_TX",
  "stateSpecificData": {
    "isInUnderstaffedOffice": false,
    "stateCode": "US_TX",
  },
  "supervisorExternalId": "SUPERVISOR3",
  "surname": "Garcia",
}
`;

exports[`supervision staff schema for 'US_TX' 'OFFICER4' 1`] = `
{
  "district": "DISTRICT 81",
  "email": "tx-test-officer-4@example.com",
  "givenNames": "Stephanie",
  "hasCaseload": true,
  "pseudonymizedId": "p004",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER4",
  "stateCode": "US_TX",
  "stateSpecificData": {
    "isInUnderstaffedOffice": true,
    "stateCode": "US_TX",
  },
  "supervisorExternalId": "SUPERVISOR4",
  "surname": "Smith",
}
`;

exports[`supervision staff schema for 'US_TX' 'OFFICER5' 1`] = `
{
  "district": "DISTRICT 42",
  "email": "tx-test-officer-5@example.com",
  "givenNames": "Christopher",
  "hasCaseload": true,
  "pseudonymizedId": "p005",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER5",
  "stateCode": "US_TX",
  "stateSpecificData": {
    "isInUnderstaffedOffice": false,
    "stateCode": "US_TX",
  },
  "supervisorExternalId": "SUPERVISOR5",
  "surname": "Johnson",
}
`;

exports[`supervision staff schema for 'US_UT' 'UTOFFICER1' 1`] = `
{
  "email": null,
  "givenNames": "Sunny",
  "hasCaseload": true,
  "pseudonymizedId": "p001",
  "recordType": "supervisionStaff",
  "staffExternalId": "UTOFFICER1",
  "stateCode": "US_UT",
  "supervisorExternalId": null,
  "surname": "Campana",
}
`;
